# tuishark

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Cross.toml  Dockerfile  README.md
.forgejo/workflows/: ci.yml  docker.yml
tuishark/: Cargo.toml  build.rs
tuishark-ebpf/: Cargo.toml  build.sh
tuishark/ebpf/: tuishark-ebpf
tuishark/src/: app.rs  cli.rs  event.rs  main.rs  tui.rs
tuishark/src/ai/: context.rs  mod.rs  model.rs  worker.rs
tuishark/src/capture/: file.rs  live.rs  mod.rs  save.rs
tuishark/src/config/: ai.rs  columns.rs  filters.rs  keys.rs  mod.rs  theme.rs
tuishark/src/dissect/: deep.rs  fast.rs  mod.rs  model.rs  worker.rs
tuishark/src/export/: csv.rs  json.rs  mod.rs  text.rs
tuishark/src/filter/: ast.rs  eval.rs  mod.rs  parser.rs
tuishark/src/ipinfo/: lookup.rs  mod.rs  special.rs
tuishark/src/session/: mod.rs  recent.rs
tuishark/src/stats/: conversations.rs  endpoints.rs  io_graph.rs  mod.rs  model.rs  protocol.rs
tuishark/src/store/: mod.rs  packet_store.rs
tuishark/src/trace/: btf.rs  container_store.rs  engine.rs  lookup.rs  mod.rs  model.rs  path_aggregator.rs  path_engine.rs  path_model.rs  path_store.rs  store.rs
tuishark/src/ui/: layout.rs  mod.rs  theme.rs
tuishark/src/ui/dialogs/: ai_overlay.rs  container_dialog.rs  export_dialog.rs  help_dialog.rs  interface_picker.rs  ipinfo_dialog.rs  mod.rs  open_dialog.rs  preset_picker.rs  quit_confirm.rs  save_dialog.rs  stats_dialog.rs
tuishark/src/ui/widgets/: detail_tree.rs  filter_bar.rs  hex_view.rs  mod.rs  packet_table.rs  status_bar.rs  trace_view.rs
(+36 files in other folders)
