[package]
name = "tuishark"
version = "0.1.0"
edition = "2024"
description = "Modern console-based packet analyzer"

[[bin]]
name = "tuishark"
path = "src/main.rs"

[features]
default = []
trace = ["aya"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
catppuccin = { version = "2", features = ["ratatui"] }
pcap = "2"
etherparse = "0.16"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rtshark = "4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
toml = "0.8"
aya = { version = "0.13", optional = true }
